--- a/YK/YK.vcxproj
+++ b/YK/YK.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="ServerSocket.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="YK.h" />
   </ItemGroup>
@@ -152,6 +153,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="ServerSocket.cpp" />
     <ClCompile Include="YK.cpp" />
   </ItemGroup>
   <ItemGroup>
